fixed overflow

--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -46,3 +46,9 @@
   justify-content: space-between;
   padding-block: 1.5rem;
 }
+
+@media screen and (max-width: 400px) {
+  .num {
+    display: none;
+  }
+}
